--- a/src/modules/responsive/_display.scss
+++ b/src/modules/responsive/_display.scss
@@ -1,21 +1,12 @@
 @use '../../functions';
 @use '../../variables';
 
-$displays: (
-  b: block,
-  i: inline,
-  ib: inline-block,
-  n: none,
-  t: table,
-  tc: table-cell,
-  f: flex,
-  if: inline-flex,
-  g: grid
-);
+$global-prefix: variables.$global-prefix;
+$prefix: variables.$display-prefix;
 
 @mixin display($media-suffix) {
-  @each $name, $value in $displays {
-    #{functions.construct-class-name(variables.$global-prefix, d + $name, $media-suffix)} {
+  @each $name, $value in variables.$displays {
+    #{functions.construct-class-name($global-prefix, $prefix + $name, $media-suffix)} {
       display: $value;
     }
   }
