--- a/src/modules/responsive/_flex-direction.scss
+++ b/src/modules/responsive/_flex-direction.scss
@@ -1,12 +1,13 @@
 @use '../../functions';
 @use '../../variables';
 
-$flex-directions: column, row, column-reverse, row-reverse;
+$global-prefix: variables.$global-prefix;
+$moduleName: variables.$flex-direction-name;
 
 @mixin flex-direction($media-suffix) {
-  @each $direction in $flex-directions {
-    #{functions.construct-class-name(variables.$global-prefix, flex, $direction, $media-suffix)} {
-      flex-direction: $direction;
+  @each $name, $value in variables.$flex-directions {
+    #{functions.construct-class-name($global-prefix, $moduleName, $name, $media-suffix)} {
+      flex-direction: $value;
     }
   }
 }
