--- a/src/modules/responsive/_font-weight.scss
+++ b/src/modules/responsive/_font-weight.scss
@@ -1,9 +1,11 @@
 @use '../../functions';
 @use '../../variables';
 
+$global-prefix: variables.$global-prefix;
+
 @mixin font-weight($media-suffix) {
   @each $name, $value in variables.$font-weight-levels {
-    #{functions.construct-class-name(variables.$global-prefix, $name, $media-suffix)} {
+    #{functions.construct-class-name($global-prefix, $name, $media-suffix)} {
       font-weight: $value;
     }
   }
