--- a/src/modules/responsive/_height.scss
+++ b/src/modules/responsive/_height.scss
@@ -1,9 +1,12 @@
 @use '../../functions';
 @use '../../variables';
 
+$global-prefix: variables.$global-prefix;
+$prefix: variables.$height-prefix;
+
 @mixin height($media-suffix) {
   @each $level, $value in variables.$sizer-levels {
-    #{functions.construct-class-name(variables.$global-prefix, h + $level, $media-suffix)} {
+    #{functions.construct-class-name($global-prefix, $prefix + $level, $media-suffix)} {
       height: $value;
     }
   }
