--- a/src/modules/responsive/_padding.scss
+++ b/src/modules/responsive/_padding.scss
@@ -1,37 +1,20 @@
 @use '../../functions';
 @use '../../variables';
+@use 'sass:map';
 
-$paddings: (
-  p:  padding,
-  pt: padding-top,
-  pr: padding-right,
-  pb: padding-bottom,
-  pl: padding-left
-);
+$global-prefix: variables.$global-prefix;
 
 @mixin padding($media-suffix) {
-  @each $name, $property in $paddings {
-    @each $level, $value in variables.$spacer-levels {
-      #{functions.construct-class-name(variables.$global-prefix, $name + $level, $media-suffix)} {
-        #{$property}: $value;
+  @each $name, $map in variables.$paddings {
+    $levels: map.get($map, levels);
+    $properties: map.get($map, properties);
+
+    @each $level, $value in $levels {
+      #{functions.construct-class-name($global-prefix, $name + $level, $media-suffix)} {
+        @each $property in $properties {
+          #{$property}: $value;
+        }
       }
     }
   }
-
-  // Padding horizontal
-  @each $level, $value in variables.$spacer-levels {
-    .#{variables.$global-prefix}ph#{$level}#{$media-suffix} {
-      padding-left: $value;
-      padding-right: $value;
-    }
-  }
-
-  // Padding vertical
-  @each $level, $value in variables.$spacer-levels {
-    .#{variables.$global-prefix}pv#{$level}#{$media-suffix} {
-      padding-top: $value;
-      padding-bottom: $value;
-    }
-  }
-
 }
