--- a/src/modules/responsive/_position.scss
+++ b/src/modules/responsive/_position.scss
@@ -1,12 +1,12 @@
 @use '../../functions';
 @use '../../variables';
 
-$positions: static, absolute, relative, fixed, sticky;
+$global-prefix: variables.$global-prefix;
 
 @mixin position($media-suffix) {
-  @each $position in $positions {
-    #{functions.construct-class-name(variables.$global-prefix, $position, $media-suffix)} {
-      position: $position;
+  @each $name, $value in variables.$positions {
+    #{functions.construct-class-name($global-prefix, $name, $media-suffix)} {
+      position: $value;
     }
   }
 }
