--- a/src/modules/responsive/_vertical-align.scss
+++ b/src/modules/responsive/_vertical-align.scss
@@ -1,21 +1,12 @@
 @use '../../functions';
 @use '../../variables';
 
-$vertical-aligns: (
-  mid:         middle,
-  middle:      middle,
-  base:        baseline,
-  top:         top,
-  bottom:      bottom,
-  text-top:    text-top,
-  text-bottom: text-bottom,
-  sub:         sub,
-  super:       super
-);
+$global-prefix: variables.$global-prefix;
+$name: variables.$vertical-align-name;
 
 @mixin vertical-align($media-suffix) {
-  @each $name, $value in $vertical-aligns {
-    #{functions.construct-class-name(variables.$global-prefix, v, $name, $media-suffix)} {
+  @each $className, $value in variables.$vertical-aligns {
+    #{functions.construct-class-name($global-prefix, $name, $className, $media-suffix)} {
       vertical-align: $value;
     }
   }
