--- a/src/modules/responsive/_white-space.scss
+++ b/src/modules/responsive/_white-space.scss
@@ -1,15 +1,11 @@
 @use '../../functions';
 @use '../../variables';
 
-$white-spaces: (
-  nowrap: nowrap,
-  pre: pre,
-  // ws-normal: normal
-);
+$global-prefix: variables.$global-prefix;
 
 @mixin white-space($media-suffix) {
-  @each $name, $value in $white-spaces {
-    #{functions.construct-class-name(variables.$global-prefix, $name, $media-suffix)} {
+  @each $name, $value in variables.$white-spaces {
+    #{functions.construct-class-name($global-prefix, $name, $media-suffix)} {
       white-space: $value;
     }
   }
