--- a/src/modules/non-responsive/_debug.scss
+++ b/src/modules/non-responsive/_debug.scss
@@ -15,20 +15,22 @@ $dataUrlGrid16Solid: 'data:image/gif;base64,R0lGODdhEAAQAPEAAADw/wDx/xXy/////ywA
 /* stylelint-enable max-line-length */
 
 @mixin debug() {
+  $global-prefix: variables.$global-prefix;
+
   // TODO: rename debug-grid-8
-  #{functions.construct-class-name(variables.$global-prefix, debug-grid)} {
+  #{functions.construct-class-name($global-prefix, debug-grid)} {
     background: transparent url($dataUrlGrid8) repeat top left;
   }
 
-  #{functions.construct-class-name(variables.$global-prefix, debug-grid-16)} {
+  #{functions.construct-class-name($global-prefix, debug-grid-16)} {
     background: transparent url($dataUrlGrid16) repeat top left;
   }
 
-  #{functions.construct-class-name(variables.$global-prefix, debug-grid-8-solid)} {
+  #{functions.construct-class-name($global-prefix, debug-grid-8-solid)} {
     background: white url($dataUrlGrid8Solid) repeat top left;
   }
 
-  #{functions.construct-class-name(variables.$global-prefix, debug-grid-16-solid)} {
+  #{functions.construct-class-name($global-prefix, debug-grid-16-solid)} {
     background: white url($dataUrlGrid16Solid) repeat top left;
   }
 
@@ -37,7 +39,7 @@ $dataUrlGrid16Solid: 'data:image/gif;base64,R0lGODdhEAAQAPEAAADw/wDx/xXy/////ywA
    * See https://css-tricks.com/stripes-css/
    */
 
-  #{functions.construct-class-name(variables.$global-prefix, debug-striped)} {
+  #{functions.construct-class-name($global-prefix, debug-striped)} {
     background:
       repeating-linear-gradient(
         -45deg,
@@ -48,7 +50,7 @@ $dataUrlGrid16Solid: 'data:image/gif;base64,R0lGODdhEAAQAPEAAADw/wDx/xXy/////ywA
       );
   }
 
-  #{functions.construct-class-name(variables.$global-prefix, debug-striped-light)} {
+  #{functions.construct-class-name($global-prefix, debug-striped-light)} {
     background:
       repeating-linear-gradient(
         -45deg,
