--- a/src/c4s-h.scss
+++ b/src/c4s-h.scss
@@ -1,9 +1,18 @@
 /*
- *  Huge viewports
+ * Huge viewports
  */
 
-@use 'modules/responsive-all';
-@use 'modules/non-responsive-all';
+@use 'variables';
+@use 'modules/load-modules';
+@use 'sass:map';
 
-@include non-responsive-all.non-responsive-all();
-@include responsive-all.responsive-all(h);
+@include variables.configure(
+  // Do configuration
+);
+
+$breakpoint: h;
+$breakpoints: (
+  $breakpoint: map.get(variables.$breakpoints, $breakpoint)
+);
+
+@include load-modules.load-modules(null, $breakpoints);
