--- a/src/c4s-s.scss
+++ b/src/c4s-s.scss
@@ -1,9 +1,18 @@
 /*
- *  Small viewports
+ * Small viewports
  */
 
-@use 'modules/responsive-all';
-@use 'modules/non-responsive-all';
+@use 'variables';
+@use 'modules/load-modules';
+@use 'sass:map';
 
-@include non-responsive-all.non-responsive-all();
-@include responsive-all.responsive-all(s);
+@include variables.configure(
+  // Do configuration
+);
+
+$breakpoint: s;
+$breakpoints: (
+  $breakpoint: map.get(variables.$breakpoints, $breakpoint)
+);
+
+@include load-modules.load-modules(null, $breakpoints);
