Move all modules to common folder

--- a/src/_load-modules.scss
+++ b/src/_load-modules.scss
@@ -1,47 +1,47 @@
 @use 'sass:map';
-@use '../variables';
-@use './non-responsive/background-color';
-@use './non-responsive/border-color';
-@use './non-responsive/border';
-@use './non-responsive/border-style';
-@use './non-responsive/border-width';
-@use './non-responsive/box-sizing';
-@use './non-responsive/color';
-@use './non-responsive/complex';
-@use './non-responsive/cursor';
-@use './non-responsive/debug';
-@use './non-responsive/font-family';
-@use './non-responsive/font-style';
-@use './non-responsive/hover-background-color';
-@use './non-responsive/hover-color';
-@use './non-responsive/miscellaneous';
-@use './non-responsive/opacity';
-@use './non-responsive/reset';
-@use './non-responsive/text-align';
-@use './non-responsive/text-decoration';
-@use './non-responsive/text-shadow';
-@use './non-responsive/text-transform';
-@use './non-responsive/transform';
-@use './non-responsive/transition';
-@use './non-responsive/visibility';
-@use './responsive/border-radius';
-@use './responsive/coordinates';
-@use './responsive/display';
-@use './responsive/flex-direction';
-@use './responsive/flex';
-@use './responsive/float';
-@use './responsive/font-size';
-@use './responsive/font-weight';
-@use './responsive/height';
-@use './responsive/line-height';
-@use './responsive/margin';
-@use './responsive/measure';
-@use './responsive/padding';
-@use './responsive/position';
-@use './responsive/tracking';
-@use './responsive/vertical-align';
-@use './responsive/white-space';
-@use './responsive/width';
+@use 'variables';
+@use 'modules/background-color';
+@use 'modules/border-color';
+@use 'modules/border';
+@use 'modules/border-style';
+@use 'modules/border-width';
+@use 'modules/box-sizing';
+@use 'modules/color';
+@use 'modules/complex';
+@use 'modules/cursor';
+@use 'modules/debug';
+@use 'modules/font-family';
+@use 'modules/font-style';
+@use 'modules/hover-background-color';
+@use 'modules/hover-color';
+@use 'modules/miscellaneous';
+@use 'modules/opacity';
+@use 'modules/reset';
+@use 'modules/text-align';
+@use 'modules/text-decoration';
+@use 'modules/text-shadow';
+@use 'modules/text-transform';
+@use 'modules/transform';
+@use 'modules/transition';
+@use 'modules/visibility';
+@use 'modules/border-radius';
+@use 'modules/coordinates';
+@use 'modules/display';
+@use 'modules/flex-direction';
+@use 'modules/flex';
+@use 'modules/float';
+@use 'modules/font-size';
+@use 'modules/font-weight';
+@use 'modules/height';
+@use 'modules/line-height';
+@use 'modules/margin';
+@use 'modules/measure';
+@use 'modules/padding';
+@use 'modules/position';
+@use 'modules/tracking';
+@use 'modules/vertical-align';
+@use 'modules/white-space';
+@use 'modules/width';
 
 @mixin load-modules($modules: null, $breakpoints: null) {
   @if $modules == null {
