--- a/src/c4s-all.scss
+++ b/src/c4s-all.scss
@@ -3,7 +3,7 @@
  */
 
 @use 'variables';
-@use 'modules/load-modules';
+@use 'load-modules';
 
 @include variables.configure(
   // Do configuration
